@@ -13,6 +13,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #23146: Fix mishandling of absolute Windows paths with forward
+  slashes in pathlib.
+
 - Issue #23421: Fixed compression in tarfile CLI.  Patch by wdv4758h.
 
 - Issue #23361: Fix possible overflow in Windows subprocess creation code.
